--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,8 +1,17 @@
 .card {
-    border: 2px solid rgb(90, 85, 85);
+    border: 2px solid rgb(125, 121, 121);
     border-radius: 4px;
-    margin: 4px;
+    margin: 40px;
     padding: 4px;
+    width: 200px;
+}
+
+.card:hover{
+  border: 2.2px solid rgb(128, 112, 112);
+  width: 208px;
+  border-radius: 4px;
+  animation: logo-spin infinite 20s linear;
+  cursor: pointer;
 }
 
 img {
