--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,3 +1,16 @@
 .danger{
     color: rgb(225, 10, 10);
 }
+label{
+    margin: 8px;
+}
+input{
+    padding: 6px;
+    margin: 8px;
+}
+.form{
+    margin-top: 30px;
+    background-color: aliceblue;
+    padding: 8px;
+   
+}
