--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,13 +1,14 @@
 .card {
-    border: 2px solid rgb(125, 121, 121);
+    border: 2.4px solid rgb(132, 139, 235);
     border-radius: 4px;
     margin: 40px;
     padding: 4px;
     width: 200px;
+    background-color: rgb(239, 241, 248);;
 }
 
 .card:hover{
-  border: 2.2px solid rgb(128, 112, 112);
+  border: 2.8px solid rgb(91, 100, 227);
   width: 208px;
   border-radius: 4px;
   animation: logo-spin infinite 20s linear;
@@ -17,5 +18,5 @@
 img {
   width: 100%;
   height: auto;
-  max-width: 100px;
+  border-radius: 4px;
 }
